added navigation routes and tabBar navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "cmake.sourceDirectory": "/home/parth/Desktop/meals_app/linux/flutter"
+    "cmake.sourceDirectory": "/home/parth/Desktop/meals_app/linux/flutter",
+    "cmake.configureOnOpen": false,
+    "java.compile.nullAnalysis.mode": "disabled"
 }
